# opensftp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  IMPROVEMENTS.md  LICENSE  PLAN.md  README.md  monitor_resources.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py
.github/workflows/: ci.yml  release.yml
src/sftp_ui/: __main__.py  app.py
src/sftp_ui/animations/: transitions.py
src/sftp_ui/core/: cloud_client.py  command_registry.py  connection.py  connection_tester.py  license.py  platform_utils.py  queue.py  search.py  sftp_client.py  ssh_config_importer.py  team_profiles.py  transfer.py  transfer_history.py  ui_state.py
src/sftp_ui/styling/: theme_manager.py
src/sftp_ui/styling/themes/: dark.qss  dracula.qss  frost.qss  light.qss  nord.qss  solarized_dark.qss
src/sftp_ui/ui/: glass_frame.py  main_window.py  session_widget.py
src/sftp_ui/ui/dialogs/: command_palette.py  connection_dialog.py  connection_manager.py  license_dialog.py  permissions_dialog.py  search_dialog.py  shortcuts_dialog.py  sync_dialog.py  theme_dialog.py
src/sftp_ui/ui/panels/: local_panel.py  remote_panel.py
src/sftp_ui/ui/widgets/: animated_status_bar.py  bookmarks_bar.py  connection_combo_delegate.py  pro_gate.py  session_sidebar.py  skeleton_widget.py  smooth_progress_bar.py  status_dot.py  transfer_bar.py  transfer_panel.py
tests/: conftest.py  test_animated_status_bar.py  test_bookmarks_bar.py  test_cloud_client.py  test_cloud_connection_dialog.py  test_command_palette.py  test_connection.py  test_connection_bugs.py  test_connection_dialog.py  test_connection_test_button.py  test_download.py  test_duplicate_name.py  test_e2e_screenshots.py  test_feature_auto_reconnect.py  test_feature_drag_drop.py  test_feature_edit_remote.py  test_feature_remote_search.py  test_feature_tabs.py  test_frost_hires.py  test_frost_screenshots.py  test_glass_frame.py  test_history_wiring.py  test_job_item_progress.py  test_keepalive_tuning.py  test_keychain.py  test_license.py  test_license_dialog.py  test_load_pkey.py  test_local_panel.py  test_local_panel_info.py  test_local_panel_keys.py  test_local_panel_ops.py  test_main_window.py  test_open_in_terminal.py  test_pause_resume.py  test_permissions_dialog.py  test_platform_utils.py  test_queue.py  test_queue_extended.py  test_queue_integration.py  (+29 more)
