[build-system]
requires = ["briefcase"]
build-backend = "briefcase.integrations.build_system"

[tool.briefcase]
requires-python = ">=3.11"
project_name = "openSFTP"
bundle = "de.renemurrell.opensftp"
version = "0.1.0"
url = "https://renemurrell.de/software/opensftp"
license.text = "MIT"
author = "René Murrell"
author_email = "ich@renemurrell.de"

[tool.briefcase.app.sftp-ui]
formal_name = "openSFTP"
description = "Dual-pane SFTP client — fast, native, open source"
long_description = "Dual-pane SFTP client with parallel transfers, folder sync, session restore, and 5 themes. Free core (MIT). Pro build available."
sources = ["src/sftp_ui"]
test_sources = ["tests"]

requires = [
    "PySide6>=6.5",
    "paramiko>=3.0",
    "keyring>=24.0",
]

test_requires = [
    "pytest",
    "pytest-mock",
]

[tool.briefcase.app.sftp-ui.macOS]
requires = [
    "std-nslog~=1.0.0",
]

[tool.briefcase.app.sftp-ui.linux]
requires = []

[tool.briefcase.app.sftp-ui.linux.system.ubuntu]
system_requires = [
    "libgl1-mesa-dev",
    "libglib2.0-dev",
    "libdbus-1-dev",
    "libxkbcommon-dev",
    "libfontconfig1-dev",
]

[tool.briefcase.app.sftp-ui.windows]
requires = []
